Compelete Home Page

--- a/src/App.css
+++ b/src/App.css
@@ -347,7 +347,7 @@ img {
 
 .footerWidget h3,
 .footerWidget .ant-list-item-meta-title a {
-  color: #d7d7d7;
+  color: #d7d7d7 !important;
 }
 
 .footerWidget h3 {
@@ -356,7 +356,7 @@ img {
 }
 
 .footerWidget .ant-list-item-meta-description {
-  color: #f14705;
+  color: #f14705  !important;
 }
 
 .footerWidget .ant-list-split .ant-list-item {
